--- a/src/components/Calculator.css
+++ b/src/components/Calculator.css
@@ -1,4 +1,5 @@
 button{
+    font-family: 'SFProRegular', sans-serif;
     width: 5rem;
     height: 5rem;
     font-size: 1.5rem;
@@ -42,6 +43,7 @@ button:hover{
 }
 
 .result{
+    font-family: 'SFProRegular', sans-serif;
     color: #ffffff;
     display: flex;
     justify-content: flex-end;
