--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: "SFProRegular";
+  src: local("SFProRegular"),
+  url("./fonts/SFPRO-Regular.OTF") format("opentype");
+  font-weight:normal;
+}
